// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayTable renders 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover"
    />
  </div>
</div>
`;

exports[`ClayTable renders a Cell delimited 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover table-striped"
    >
      <thead>
        <tr
          class=""
        >
          <th
            class="table-cell-expand table-cell-start"
          >
            <span
              class="text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                Start
              </span>
            </span>
          </th>
          <th
            class="table-cell-expand"
          >
            <button
              type="button"
            >
              Dummy
            </button>
          </th>
          <th
            class="table-cell-expand"
          >
            <button
              type="button"
            >
              Dummy
            </button>
          </th>
          <th
            class="table-cell-expand table-cell-end"
          >
            <span
              class="text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                End
              </span>
            </span>
          </th>
        </tr>
      </thead>
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a Cell with text alignment set to center 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover table-striped"
    >
      <thead>
        <tr
          class=""
        >
          <th
            class="table-cell-expand text-center"
          >
            <a
              href="#1"
            >
              Link
            </a>
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a full bottom vertical aligned table 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover thead-valign-bottom table-valign-bottom"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a no wrapped table 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-heading-nowrap table-hover table-nowrap"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a responsive table 1`] = `
<div>
  <div
    class="table-responsive table-responsive-sm"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a responsive table 2`] = `
<div>
  <div
    class="table-responsive table-responsive-sm"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table bordered 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-bordered table-hover"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table hover 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table striped 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover table-striped"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with a Body 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover"
    >
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with a Head 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover"
    >
      <thead />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with a Head and Body 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with an active row 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover"
    >
      <tbody>
        <tr
          class="table-active"
        />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with multiple Cells into Row 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover"
    >
      <tbody>
        <tr
          class=""
        >
          <td
            class="table-cell-expand"
          >
            <span
              class="text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                One
              </span>
            </span>
          </td>
          <td
            class="table-cell-expand"
          >
            <button
              type="button"
            >
              Two
            </button>
          </td>
          <td
            class="table-cell-expand"
          >
            <span
              class="text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                Three
              </span>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with multiple rows into Body 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover"
    >
      <tbody>
        <tr
          class=""
        />
        <tr
          class=""
        />
        <tr
          class=""
        />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with multiple rows into Head 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover"
    >
      <thead>
        <tr
          class=""
        />
        <tr
          class=""
        />
        <tr
          class=""
        />
      </thead>
    </table>
  </div>
</div>
`;

exports[`ClayTable renders with a headingTitle 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-list show-quick-actions-on-hover table-hover"
    >
      <tbody>
        <tr
          class="table-divider"
        >
          <td
            class="table-cell-expand"
            colspan="8"
          >
            <span
              class="text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                Recipes
              </span>
            </span>
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="table-cell-expand"
          >
            <p
              class="table-list-title"
            >
              Hamburger
            </p>
          </td>
          <td
            class="table-cell-expand"
          />
          <td
            class="table-cell-expand"
          >
            <span
              class="text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                U.S.A
              </span>
            </span>
          </td>
          <td
            class="table-cell-expand text-right"
          >
            <span
              class="text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                10 min.
              </span>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
